--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.1.0
       with:
-        server: ftp://173.201.191.100
+        server: ftp.elearningholyquran.com
         username: admin@elearningholyquran.com
         password: ${{ secrets.ACCESSTOKEN }}
